# alibaba2018_data_extraction

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clear_dir.sh  data_processing_nohup.py
src/: CMakeLists.txt  csv2.hpp  main.cpp  reader.hpp  resort.hpp
test/: CMakeLists.txt  test.cpp
test/data/: .data1.csv.swp  data1.csv
test_data/: data2.csv
test_data/merged/partion_10/: 10005.csv
test_data/sorted/partion_10/: 10004.csv
util/: main  main.cc  makefile
